[package]
name = "dps310-async"
version = "0.1.0"
authors = ["Olivér Pirger <oliver@pirger.eu>"]
edition = "2024"
description = "Universal embedded async driver for Infeneon DPS310."
repository = "https://github.com/4f48/dps310-async"
license = "GPL-3.0-or-later"
keywords = ["async", "embedded-hal", "pressure"]
categories = ["embedded", "hardware-support", "no-std::no-alloc"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-hal-async = "1.0.0"

[features]
defmt = ["dep:defmt", "embedded-hal-async/defmt-03"]
